[gd_scene load_steps=3 format=3 uid="uid://uum8ioasonyt"]

[ext_resource type="Script" uid="uid://cq0r3xscbi1wl" path="res://Scripts/text_chat.gd" id="1_o1flr"]
[ext_resource type="Theme" uid="uid://430hiudad3go" path="res://Themes/test_theme.tres" id="2_sxrxi"]

[node name="TextChat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1flr")

[node name="ChatLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 522.0
offset_bottom = 30.0
theme = ExtResource("2_sxrxi")
text = "  Chat"

[node name="ChatBox" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 28.0
offset_right = 522.0
offset_bottom = 550.0
theme = ExtResource("2_sxrxi")
scroll_following = true
shortcut_keys_enabled = false

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 548.0
offset_right = 522.0
offset_bottom = 900.0
theme = ExtResource("2_sxrxi")

[node name="TypeEdit" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 34.0
offset_right = 440.0
offset_bottom = 326.0
theme = ExtResource("2_sxrxi")
placeholder_text = "Type here..."

[node name="SendButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 448.0
offset_top = 37.0
offset_right = 512.0
offset_bottom = 93.0
theme = ExtResource("2_sxrxi")
text = "Send 
Message"

[node name="MicButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 39.0
offset_top = 4.0
offset_right = 134.0
offset_bottom = 30.0
theme = ExtResource("2_sxrxi")
toggle_mode = true
text = "Mute Microphone"

[node name="VolButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 145.0
offset_top = 5.0
offset_right = 240.0
offset_bottom = 31.0
theme = ExtResource("2_sxrxi")
toggle_mode = true
text = "Mute Volume"

[node name="EmojiButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 448.0
offset_top = 108.0
offset_right = 512.0
offset_bottom = 156.0
theme = ExtResource("2_sxrxi")
text = "Emoji"

[connection signal="pressed" from="Panel/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="toggled" from="Panel/MicButton" to="." method="_on_mic_button_toggled"]
[connection signal="toggled" from="Panel/VolButton" to="." method="_on_vol_button_toggled"]
[connection signal="pressed" from="Panel/EmojiButton" to="." method="_on_emoji_button_pressed"]
